Modifyng lab title

--- a/Introducción a Pandas.ipynb
+++ b/Introducción a Pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introducción a herramientas para Ciencia de Datos - Pandas"
+    "# Introducción a Pandas"
    ]
   },
   {
